Disable SadTab::RecordFirstPaint DCHECK on Mac

Many tests that crash/kill a tab are flaking because of this DCHECK
on Mac-10.9.

TBR=sky@chromium.org

Bug: 810416
Change-Id: Id0ffdd7372562e627d7476f2369b0241f3ab5da4
Reviewed-on: https://chromium-review.googlesource.com/909129
Reviewed-by: Kevin McNee <mcnee@chromium.org>
Commit-Queue: Kevin McNee <mcnee@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535446}
Former-commit-id: ecd6be27b79aefc23b0a1e0801b9c67afcaa3131