chrome/browser/ui/sad_tab.cc
@@ -195,7 +195,10 @@ std::vector<int> SadTab::GetSubMessages() {
 }
 
 void SadTab::RecordFirstPaint() {
+#if !defined(OS_MACOSX)
+  // This DCHECK is causing tests on Mac-10.9 to flake. https://crbug.com/810416
   DCHECK(!recorded_paint_);
+#endif
   recorded_paint_ = true;
 
   switch (kind_) {
